--- a/package.json
+++ b/package.json
@@ -62,5 +62,16 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LiuHD520/ec_vue.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LiuHD520/ec_vue/issues"
+  },
+  "homepage": "https://github.com/LiuHD520/ec_vue#readme"
 }
